@@ -76,4 +76,6 @@ INT8		GetNumberForAutoSave( BOOLEAN fLatestAutoSave );
 extern UINT32 guiJA2EncryptionSet;
 extern UINT32 guiBrokenSaveGameVersion;
 
+extern BOOLEAN gfUseConsecutiveQuickSaveSlots;
+
 #endif
